--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "axios": "^0.18",
     "babel-preset-react": "^6.23.0",
+    "bootstrap": "^3.3.6",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.1",
     "laravel-mix": "^2.1.11",
@@ -20,6 +21,7 @@
     "react-dom": "^16.2.0"
   },
   "dependencies": {
+    "jquery": "^3.4.1",
     "prop-types": "^15.6.0",
     "rc-collapse": "^1.11.3",
     "react-alice-carousel": "^1.15.2",
@@ -28,9 +30,11 @@
     "react-hover-observer": "^2.1.1",
     "react-meta-tags": "^0.7.4",
     "react-phone-number-input": "^2.3.20",
+    "react-popper": "^1.3.3",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-summernote": "^2.0.0",
     "react-table": "^6.10.0",
     "react-validation": "^3.0.7",
     "redux": "^4.0.0",
