--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-burger-menu": "^2.6.10",
     "react-dropzone": "^10.1.6",
     "react-hover-observer": "^2.1.1",
+    "react-html-parser": "^2.0.2",
     "react-meta-tags": "^0.7.4",
     "react-phone-number-input": "^2.3.20",
     "react-popper": "^1.3.3",
