--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rc-collapse": "^1.11.3",
     "react-alice-carousel": "^1.15.2",
     "react-burger-menu": "^2.6.10",
+    "react-device-detect": "^1.7.5",
     "react-dropzone": "^10.1.6",
     "react-hover-observer": "^2.1.1",
     "react-html-parser": "^2.0.2",
