--- a/.env
+++ b/.env
@@ -24,12 +24,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_DRIVER=mailgun
+MAIL_HOST=smtp.mailgun.org
+MAIL_PORT=587
+MAIL_USERNAME=noreply@mg.accessoslo.no
+MAIL_PASSWORD=Y2Y2NzFjN2ZiYmY4NzkwZTQ0Y
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=noreply@accessoslo.no
+MAIL_FROM_NAME=FantasyLab
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
