--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.8.*",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
+        "phpmailer/phpmailer": "^6.0",
         "tymon/jwt-auth": "^0.5.12"
     },
     "require-dev": {
