--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hover-observer": "^2.1.1",
     "react-html-parser": "^2.0.2",
     "react-meta-tags": "^0.7.4",
+    "react-modal": "^3.10.1",
     "react-phone-number-input": "^2.3.20",
     "react-popper": "^1.3.3",
     "react-redux": "^5.0.6",
