--- a/.env
+++ b/.env
@@ -24,14 +24,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=mailgun
+MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailgun.org
 MAIL_PORT=587
-MAIL_USERNAME=noreply@mg.accessoslo.no
-MAIL_PASSWORD=Y2Y2NzFjN2ZiYmY4NzkwZTQ0Y
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=noreply@accessoslo.no
-MAIL_FROM_NAME=FantasyLab
+MAIL_USERNAME=postmaster@mg.fantasylab.no
+MAIL_PASSWORD=451124397474aca5a378ac254649628d
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=no-reply@fantasylab.io
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
