add babel webpack for internet explorer issue

--- a/package.json
+++ b/package.json
@@ -11,17 +11,26 @@
   },
   "devDependencies": {
     "axios": "^0.18",
-    "babel-preset-react": "^6.23.0",
     "bootstrap": "^3.3.6",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.1",
-    "laravel-mix": "^2.1.11",
+    "laravel-mix": "^4.0.0",
     "lodash": "^4.17.4",
     "react": "^16.0.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "resolve-url-loader": "^2.3.1",
+    "sass": "^1.22.12",
+    "sass-loader": "^7.3.1"
   },
   "dependencies": {
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-loader": "^8.0.6",
+    "browserslist": "^4.7.0",
     "jquery": "^3.4.1",
+    "laravel-mix-polyfill": "^1.1.0",
     "prop-types": "^15.6.0",
     "rc-collapse": "^1.11.3",
     "react-alice-carousel": "^1.15.2",
