update popup text

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:5RPBMYuZRhgUVNk+tg96X87e0slu/ZVFf0LeUKXerB0=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
-
+NODE_ENV= node
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
