--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
         "phpmailer/phpmailer": "^6.0",
+        "spatie/laravel-server-side-rendering": "^1.2",
         "tymon/jwt-auth": "^0.5.12"
     },
     "require-dev": {
