--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:5RPBMYuZRhgUVNk+tg96X87e0slu/ZVFf0LeUKXerB0=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=https://fantasylab.io
 NODE_ENV= node
 LOG_CHANNEL=stack
 
