--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prop-types": "^15.6.0",
     "rc-collapse": "^1.11.3",
     "react-alice-carousel": "^1.15.2",
+    "react-confirm-alert": "^2.6.1",
     "react-cookie-consent": "^2.5.0",
     "react-device-detect": "^1.7.5",
     "react-dropzone": "^10.1.6",
