appspec.yml edited online with Bitbucket

--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: .
-    destination: /var/www/vhosts/fantasylab.io
+    destination: /var/www/vhosts/fantasy.fantasylab.io
 hooks:
   BeforeInstall:
     - location: deploy/before_install
