--- a/.env
+++ b/.env
@@ -23,13 +23,8 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailgun.org
-MAIL_PORT=587
-MAIL_USERNAME=postmaster@mg.fantasylab.no
-MAIL_PASSWORD=451124397474aca5a378ac254649628d
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=no-reply@fantasylab.io
+MAIL_DRIVER=sendgrid
+SENDGRID_API_KEY=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
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
